# promptpro

./: .gitignore  Cargo.toml  LICENSE  README.md  build.sh  build_py.sh  demo_ppro.py  install.sh  pyproject.toml  setup.py  upload.sh
examples/: main.rs
promptpro/: __init__.py  api.py  cli.py
src/: api.rs  commands.rs  lib.rs  main.rs  python_bindings.rs  storage.rs  sync_api.rs  tui.rs  types.rs  utils.rs
