[package]
name = "promptpro"
version = "0.1.1"
edition = "2021"

authors = ["jinfagang@163.com"]                               # optional but recommended
description = "PromptPro is an advanced prompt management system with versioning, tagging, encryption, and TUI interface. The ultimate tool for prompt engineers and AI developers."
license = "GPL-3.0-only"                                      # or just "MIT" / "Apache-2.0"
repository = "https://github.com/lucasjinreal/promptpro"                # optional but recommended
homepage = "https://github.com/lucasjinreal/promptpro"                  # optional
documentation = "https://docs.rs/promptpro"                             # optional
keywords = ["ai", "prompt-engineering", "versioning", "management"]                 # optional
categories = ["development-tools", "command-line-utilities"]


[lib]
name = "promptpro"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "promptpro"
path = "src/main.rs"

[[bin]]
name = "example"
path = "examples/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
sled = "0.34"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
blake3 = "1.8"
similar = "2.7"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "1.48", features = ["full"] }
ratatui = "0.26"
crossterm = "0.27"
aes-gcm = "0.10"
rand = "0.8"
hex = "0.4"
tempfile = "3.0"
once_cell = "1.21.3"
unicode-width = "0.2.2"

[dependencies.pyo3]
version = "0.20"
features = ["extension-module"]

[features]
python = []

[dev-dependencies]
tempfile = "3.23"
